kube/lookie/scryer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scryer
  namespace: default
  labels:
    app.kubernetes.io/name: scryer
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: scryer
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
